add target _blank

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -31,12 +31,18 @@
   </div>
   <ul class="hero-list">
     <li class="hero-item">
-      <a href="https://www.instagram.com/goitclub/" class="hover-link"
+      <a
+        href="https://www.instagram.com/goitclub/"
+        class="hover-link"
+        target="_blank"
         >Instagram</a
       >
     </li>
     <li class="hero-item">
-      <a href="https://www.facebook.com/goITclub/" class="hover-link"
+      <a
+        href="https://www.facebook.com/goITclub/"
+        class="hover-link"
+        target="_blank"
         >Facebook</a
       >
     </li>
@@ -44,12 +50,16 @@
       <a
         href="https://www.linkedin.com/school/goit-start-your-career-in-it"
         target="_blank"
+        target="_blank"
         class="hover-link"
         >Linkedin</a
       >
     </li>
     <li class="hero-item">
-      <a href="https://github.com/1ster14ka/js-avengers" class="hover-link"
+      <a
+        href="https://github.com/1ster14ka/js-avengers"
+        class="hover-link"
+        target="_blank"
         >GitHub</a
       >
     </li>
