--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -16,7 +16,7 @@
     <div class="wrapp-hero-text">
       <div class="wrapp-hero">
         <div class="wrapp-arrow">
-          <svg class="hero-arrow" width="28" height="">
+          <svg class="hero-arrow" width="28">
             <use
               href="./img/svg-icons/symbol-defs.svg#icon-icon-arrow2-1"
             ></use>
